Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
